Issue #1987066 by Kevin Morse, JohnAlbin, rteijeiro, echoz, ry5n: Rename files to match CSS file naming convention.

--- a/css/overlay-child.css
+++ b/css/overlay-child.css
@@ -63,7 +63,7 @@
 }
 #overlay-close,
 #overlay-close:hover {
-  background: #ffffff url(images/close.png) no-repeat;
+  background: #ffffff url(../images/close.png) no-repeat;
   border-radius: 0 12px 12px 0; /* LTR */
   display: block;
   height: 26px;
